--- a/Purchasing.Jobs.CreateOrderIndexes/packages.config
+++ b/Purchasing.Jobs.CreateOrderIndexes/packages.config
@@ -4,9 +4,17 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="Elasticsearch.Net" version="1.4.0" targetFramework="net451" />
+  <package id="Microsoft.Azure.WebJobs" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Azure.WebJobs.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net451" />
   <package id="NEST" version="1.4.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net451" />
 </packages>
