--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -863,6 +863,8 @@
     <Content Include="Views\Order\PayInvoice.cshtml" />
     <Content Include="Views\Report\ProcessingTimeSummary.cshtml" />
     <Content Include="Views\Report\ProcessingTimeByRole.cshtml" />
+    <Content Include="Views\Admin\ModifySscAdmin.cshtml" />
+    <Content Include="Views\Admin\RemoveSscAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
