--- a/Purchasing.WS/packages.config
+++ b/Purchasing.WS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="elmah" version="1.2.2" targetFramework="net451" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net451" />
