--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -32,6 +32,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" targetFramework="net45" />
   <package id="NEST" version="1.3.1" targetFramework="net451" />
+  <package id="NewRelic.Azure.WebSites.x64" version="4.4.60.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NPOI" version="2.0.6" targetFramework="net451" />
