--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -463,6 +463,7 @@
     <Content Include="Css\custom.css" />
     <Content Include="Css\Datatables.css" />
     <Content Include="Css\icons.css" />
+    <Content Include="Css\images\chosen-sprite.png" />
     <Content Include="Css\images\ui-bg_diagonals-small_50_aaaaaa_40x40.png" />
     <Content Include="Css\images\ui-bg_flat_50_aaaaaa_40x100.png" />
     <Content Include="Css\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -482,7 +483,6 @@
     <Content Include="Css\jquery.qtip.min.css" />
     <Content Include="Css\jquery.tzCheckbox.css" />
     <Content Include="Css\jquery.tzCheckbox\background.png" />
-    <Content Include="Css\single\chosen-sprite.png" />
     <Content Include="Css\single\chosen.css" />
     <Content Include="Css\single\fileuploader\fileuploader.css" />
     <Content Include="Css\single\fileuploader\loading.gif" />
