--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -205,6 +205,14 @@
     -->
     <security allowRemoteAccess="false" />
     <errorLog type="Elmah.Io.ErrorLog, Elmah.Io" LogId="8223b9a6-4f5a-4216-bc3a-8c58f9945c9b" />
+
+    <errorFilter>
+      <test>
+        <or>
+          <equal binding="BaseException.Message" value="Server cannot set status after HTTP headers have been sent." type="String" />
+        </or>
+      </test>
+    </errorFilter>
   </elmah>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
