--- a/Purchasing.Jobs.EmailNotifications/packages.config
+++ b/Purchasing.Jobs.EmailNotifications/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="elmah.io.client" version="2.0.22" targetFramework="net451" />
   <package id="Microsoft.Azure.WebJobs" version="1.0.1" targetFramework="net451" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.0.1" targetFramework="net451" />
@@ -9,6 +10,8 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
   <package id="Serilog" version="1.4.204" targetFramework="net451" />
   <package id="Serilog.Sinks.ElmahIO" version="1.5.8" targetFramework="net451" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
