--- a/Purchasing.Core/packages.config
+++ b/Purchasing.Core/packages.config
@@ -7,7 +7,8 @@
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" requireReinstallation="True" />
   <package id="NEST" version="7.3.0" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NEST.JsonNetSerializer" version="7.3.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net451" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
