--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -15,7 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" />
-    <add key="AfsLookupUrl" value="https://kfs.ucdavis.edu/kfs-prd"/> <!-- This will be changing to https://kfs-uat.ucdavis.edu/fin for testing. probably just the fin for production -->
+    <add key="AfsLookupUrl" value="https://kfs.ucdavis.edu/kfs-prd" /> <!-- This will be changing to https://kfs-uat.ucdavis.edu/fin for testing. probably just the fin for production -->
     <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
     <add key="Stackify.AppName" value="Purchasing" />
@@ -23,6 +23,7 @@
     <add key="Stackify.ApiKey" value="[External]" />
     <add key="PersonLookupUrl" value="http://directory.ucdavis.edu/search/directory_results.shtml?filter=" />
     <add key="IetWsKey" value="[External]" />
+    <add key="Stackify.ElasticUrl" value="[External]" />
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
@@ -95,7 +96,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -104,6 +105,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.8.1.0" newVersion="5.8.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Elasticsearch.Net" publicKeyToken="96c599bbe3e70f5d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
