--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -10,7 +10,7 @@
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.1.0.0" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="7.3.0" targetFramework="net462" />
+  <package id="Elasticsearch.Net" version="7.8.1" targetFramework="net462" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
@@ -26,6 +26,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net462" />
   <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net452" />
@@ -44,7 +45,13 @@
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
-  <package id="Serilog" version="1.5.7" targetFramework="net451" />
+  <package id="Serilog" version="2.8.0" targetFramework="net462" />
+  <package id="Serilog.Enrichers.ClientInfo" version="1.1.3" targetFramework="net462" />
+  <package id="Serilog.Formatting.Compact" version="1.0.0" targetFramework="net462" />
+  <package id="Serilog.Formatting.Elasticsearch" version="8.4.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.Elasticsearch" version="8.4.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net462" />
   <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
   <package id="SerilogWeb.Classic" version="2.0.6" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
